WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201902
REGRESSION: [iOS 13?] TestWebKitAPI.SharedBufferTest.tryCreateArrayBufferLargeSegments is failing
https://bugs.webkit.org/show_bug.cgi?id=201902
Summary
REGRESSION: [iOS 13?] TestWebKitAPI.SharedBufferTest.tryCreateArrayBufferLarg...
Ryan Haddad
Reported
2019-09-17 21:37:16 PDT
The following test is failing on iOS simulator bots running iOS 13: TestWebKitAPI.SharedBufferTest.tryCreateArrayBufferLargeSegments /Volumes/Data/slave/ios-simulator-13-release/build/Tools/TestWebKitAPI/Tests/WebCore/SharedBuffer.cpp:117 Expected equality of these values: 'a' Which is: 'a' (97, 0x61) static_cast<char*>(arrayBuffer->data())[position] Which is: '\0'
https://build.webkit.org/builders/Apple%20iOS%2013%20Simulator%20Release%20WK2%20%28Tests%29/builds/2/steps/run-api-tests/logs/stdio
Attachments
Patch
(4.46 KB, patch)
2019-10-11 15:57 PDT
,
Alex Christensen
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-09-17 21:37:29 PDT
<
rdar://problem/55466168
>
Ryan Haddad
Comment 2
2019-09-19 15:20:40 PDT
Disabled the test for iOS in
https://trac.webkit.org/changeset/250105
Alex Christensen
Comment 3
2019-09-20 14:44:48 PDT
Interesting. The test passes for me locally. Maybe it's misinterpreting the Vector constructor somehow.
Alex Christensen
Comment 4
2019-10-11 15:57:29 PDT
Created
attachment 380797
[details]
Patch
Alex Christensen
Comment 5
2019-10-11 18:57:21 PDT
Comment on
attachment 380797
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=380797&action=review
> Source/WTF/wtf/Vector.h:-208 > - if (!__builtin_constant_p(dstEnd - dst) || (!(dstEnd - dst)))
This line should have been ... || (!!(dstEnd - dst))) That was causing this to not call memset only in optimized builds when the size was nonzero. Since I think it's not needed let's just remove it and let the compiler optimize out any memset with 0 size.
Alex Christensen
Comment 6
2019-10-14 12:54:58 PDT
Ping review?
Alex Christensen
Comment 7
2019-10-14 13:25:56 PDT
http://trac.webkit.org/r251089
Jiewen Tan
Comment 8
2019-10-15 11:08:04 PDT
***
Bug 201620
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug